// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiExpressionButton Props isActive false renders inactive 1`] = `
<button
  class="kuiExpressionButton"
>
  <span
    class="kuiExpressionButton__description"
  >
    the answer is
  </span>
   
  <span
    class="kuiExpressionButton__value"
  >
    42
  </span>
</button>
`;

exports[`KuiExpressionButton Props isActive true renders active 1`] = `
<button
  class="kuiExpressionButton kuiExpressionButton-isActive"
>
  <span
    class="kuiExpressionButton__description"
  >
    the answer is
  </span>
   
  <span
    class="kuiExpressionButton__value"
  >
    42
  </span>
</button>
`;

exports[`KuiExpressionButton renders 1`] = `
<button
  aria-label="aria-label"
  class="kuiExpressionButton testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="kuiExpressionButton__description"
  >
    the answer is
  </span>
   
  <span
    class="kuiExpressionButton__value"
  >
    42
  </span>
</button>
`;
